examples/logfiles/optimization_log_20250719_122118.txt
=== Optimization started at 2025-07-19 12:21:18.097562 ===

Starting configurable TPSO optimization with parameters:
Frequency: 79 GHz
Bandwidth: 8 GHz
Unit cell size: 2 mm
Substrate thickness: 0.8 mm
Pixel grid: 8×8
MSE threshold: 1e-10

--- Starting Phasor-Based Ternary PSO ---
Iter | Best f(x) | Mean f(x) | Stall | Inertia | Diversity
----------------------------------------------------------
Clearing COM object cache...
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
Error in CST simulation: [WinError 5] Access is denied: 'C:/Users/User'
CST file closed
Clearing COM object cache...
COM cache refreshed successfully
Current MSE: inf
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
Error in CST simulation: [WinError 5] Access is denied: 'C:/Users/User'
CST file closed
COM cache refreshed successfully
Current MSE: inf
COM cache refreshed successfully

Running CST simulation...
CPA: The specified project does not exist. A new project hasbeen created.
Do not forget to use CST_MicrowaveStudio.saveFile() to save your project.
CST file closed
COM cache refreshed successfully
Traceback (most recent call last):
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 970, in <module>
    results = pyoptimize_te(inputparameters)
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 906, in pyoptimize_te
    optimizer = ConfigurableTPSO(
        fun=pso_cost_fn,
        nvars=nvars,
        config=config
    )
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 533, in __init__
    self._initialize_swarm()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 582, in _initialize_swarm
    self._evaluate_swarm()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 593, in _evaluate_swarm
    fitness = self.fun(x_int)
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 394, in __call__
    te, freq, S = calculate_pcr(full_matrix, self.inputparameters)
                  ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 298, in calculate_pcr
    myCST.Build.Shape.addCylinder(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        orientation='z',
        ^^^^^^^^^^^^^^^^
    ...<8 lines>...
        material="PEC"          # Material doesn't matter for subtraction
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "E:\GOPAL\cst-python-api\cst_python_api\Shape.py", line 326, in addCylinder
    result = self.__MWS.AddToHistory("define cylinder: " + name, vba)
  File "<COMObject NewMWS>", line 2, in AddToHistory
KeyboardInterrupt
Traceback (most recent call last):
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 970, in <module>
    results = pyoptimize_te(inputparameters)
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 906, in pyoptimize_te
    optimizer = ConfigurableTPSO(
        fun=pso_cost_fn,
        nvars=nvars,
        config=config
    )
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 533, in __init__
    self._initialize_swarm()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 582, in _initialize_swarm
    self._evaluate_swarm()
    ~~~~~~~~~~~~~~~~~~~~^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 593, in _evaluate_swarm
    fitness = self.fun(x_int)
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 394, in __call__
    te, freq, S = calculate_pcr(full_matrix, self.inputparameters)
                  ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\GOPAL\cst-python-api\examples\TPSO_polins_79ghz.py", line 298, in calculate_pcr
    myCST.Build.Shape.addCylinder(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        orientation='z',
        ^^^^^^^^^^^^^^^^
    ...<8 lines>...
        material="PEC"          # Material doesn't matter for subtraction
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "E:\GOPAL\cst-python-api\cst_python_api\Shape.py", line 326, in addCylinder
    result = self.__MWS.AddToHistory("define cylinder: " + name, vba)
  File "<COMObject NewMWS>", line 2, in AddToHistory
KeyboardInterrupt
